--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,13 @@
+redis: &redis
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+
 development:
-  adapter: async
+  <<: *redis
 
 test:
   adapter: test
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  <<: *redis
   channel_prefix: chat_production
